Changes to vm.save grid use user clicks save button and addWidgets() function so it first checks if cookie exits if so load from cookie else load from ajax request

--- a/TestingGrid/Views/Home/Index.cshtml
+++ b/TestingGrid/Views/Home/Index.cshtml
@@ -55,14 +55,13 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        @*<div class="pure-u-1">
-                            <div id="line-example">*@
-                        @*<h2>Charts</h2><input type="button" value="connect" data-bind="click:$root.startsub">*@
+            @*<div style="width:100%; height:90%" data-bind="html: link" name="targetframe" allowTransparency="true" scrolling="no" frameborder="0"></div>*@
+
+                        @*<div class="pure-u-1"><div id="line-example">*@
                         <i class="fas fa-plug" data-bind="click:$root.startsub" style="cursor: pointer"></i>
 
                         <canvas data-bind="attr: {id:id}"></canvas>
-                        @*</div>
-                            </div>*@
+                        @*</div>  </div>*@
                     </div>
                 </div>
             </div>
