--- a/TestingGrid/Views/Home/Index.cshtml
+++ b/TestingGrid/Views/Home/Index.cshtml
@@ -33,10 +33,10 @@
                 <div data-bind="with: options">
                     <div class="card-header row" style="height:10%">
                         
-                            <div class="col-sm-6">
+                            <div class="col-xs-6">
                                 <div class="text-left" data-bind="text: name"></div>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-xs-6">
                                 <ul class="panel-action">
                                     <li><i class="fas fa-trash-alt remove-widget" data-bind="click: $root.delete"></i></li>
                                     <li><i class="fas fa-edit" data-bind="click: $root.showoptions"></i></li>
