--- a/TestingGrid/Views/Home/Index.cshtml
+++ b/TestingGrid/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/gridstack.js/0.4.0/gridstack.min.css" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.css" />
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.0/jquery-ui.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
@@ -28,67 +28,234 @@
             background-color: #18bc9c;
         }
     </style>
+
+    <style>
+        .sidebar-toggle {
+            float: left;
+            background-color: transparent;
+            background-image: none;
+            padding: 15px 15px;
+            font-family: fontAwesome;
+            color: #fff;
+        }
+        .main-header {
+            position: relative;
+            max-height: 100px;
+            z-index: 1030;
+        }
+            .main-header .logo {
+                background-color: #367fa9;
+                color: #fff;
+                border-bottom: 0 solid transparent;
+            }
+            .main-header .logo {
+                -webkit-transition: width .3s ease-in-out;
+                -o-transition: width .3s ease-in-out;
+                transition: width .3s ease-in-out;
+                display: block;
+                float: left;
+                height: 50px;
+                font-size: 20px;
+                line-height: 50px;
+                text-align: center;
+                width: 230px;
+                font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+                padding: 0 15px;
+                font-weight: 300;
+                overflow: hidden;
+            }
+        .navbar {
+            background-color: #3c8dbc;
+            -webkit-transition: margin-left .3s ease-in-out;
+            -o-transition: margin-left .3s ease-in-out;
+            transition: margin-left .3s ease-in-out;
+            margin-bottom: 0;
+            border: none;
+            min-height: 50px;
+            z-index: 1000 !important;
+            width: 100%;
+            position: fixed;
+        }
+        .main-sidebar {
+            position: fixed;
+            top: 0;
+            left: 0;
+            padding-top: 50px;
+            min-height: 100%;
+            width: 230px;
+            z-index: 810;
+            -webkit-transition: -webkit-transform .3s ease-in-out,width .3s ease-in-out;
+            -moz-transition: -moz-transform .3s ease-in-out,width .3s ease-in-out;
+            -o-transition: -o-transform .3s ease-in-out,width .3s ease-in-out;
+            transition: transform .3s ease-in-out,width .3s ease-in-out;
+            background-color: #222d32;
+        }
+        .content-wrapper {
+            min-height: 100%;
+            background-color: #ecf0f5;
+            z-index: 800;
+            padding-top: 70px;
+        }
+        .content-wrapper, .main-footer {
+            -webkit-transition: -webkit-transform .6s ease-in-out,margin .6s ease-in-out;
+            -moz-transition: -moz-transform .3s ease-in-out,margin .3s ease-in-out;
+            -o-transition: -o-transform .3s ease-in-out,margin .3s ease-in-out;
+            transition: transform 1.1s ease-in-out,margin .75s ease-in-out;
+            margin-left: 230px;
+        }
+        .navbar-default .navbar-toggle {
+            border-color: #ddd;
+            position: relative;
+            float: right;
+            padding: 9px 10px;
+            margin-top: 8px;
+            margin-right: 15px;
+            margin-bottom: 8px;
+            background-color: transparent;
+            background-image: none;
+            border: 1px solid transparent;
+            border-radius: 4px;
+        }
+            .navbar-default .navbar-toggle .icon-bar {
+                background-color: #888;
+                display: block;
+                width: 22px;
+                height: 2px;
+                border-radius: 1px;
+            }
+        .navbar-toggle .icon-bar + .icon-bar {
+            margin-top: 4px;
+        }
+    </style>
+
+    <script>
+        function toggle() {
+            var item = $('#sidebar');
+            if (!$('#sidebar').hasClass('animated')) {
+                $('#sidebar').addClass('animated fadeOutLeft');
+                $("#content").css({ 'margin-left': "0px" });
+
+                $('#sidebar').on('animationend mozanimationend webkitAnimationEnd oAnimationEnd msanimationend', function () {
+                    $('#sidebar').hide();
+                    $('#sidebar').removeClass('fadeOutLeft');
+                });
+
+            }
+            else if ($('#sidebar').hasClass('fadeInLeft')) {
+                $('#sidebar').removeClass('fadeInLeft');
+                $('#sidebar').addClass('fadeOutLeft');
+                $("#content").css({ 'margin-left': "0px" });
+                $('#sidebar').on('animationend mozanimationend webkitAnimationEnd oAnimationEnd msanimationend', function () {
+                    $('#sidebar').hide();
+                    $('#sidebar').removeClass('fadeOutLeft');
+                });
+            }
+            else {               
+                $('#sidebar').addClass('fadeInLeft'); $("#content").css({ 'margin-left': "230px" });
+                $('#sidebar').show();
+                $('#sidebar').on('animationend mozanimationend webkitAnimationEnd oAnimationEnd msanimationend', function () {
+                   $('#sidebar').show();
+                });
+            }
+        };
+    </script>
 </head>
 <body>
-    <button data-bind="click:add">Add</button>
-    <button data-bind="click:saveGrid">Save</button>
-    @*<button data-bind="click:twoWay">twoWay</button>*@
-    <div class="grid-stack" data-bind="gridStack:{ widgets:widgets }">
-        <div class="grid-stack-item" >
-            <div class="grid-stack-item-content">
-                @*<button data-bind="click: $parent.delete">Delete me</button>
-                    <div data-bind="text:x"></div><div data-bind="text:y"></div>
-                    <div data-bind="text:width"></div><div data-bind="text:height"></div>*@
-                <div data-bind="with: options">
-                    <div class="card-header" style="height:10%">
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <h3 class="text-left" data-bind="text: name"></h3>
-                            </div>
-                            <div class="col-sm-6">
-                                <ul class="panel-action">
-                                    <li><i class="fas fa-trash-alt remove-widget" data-bind="click: $root.delete"></i></li>
-                                    @*<li><button type="button" class="btn btn-primary" data-bind="click: $root.showoptions">options</button></li>*@
-                                    <li><i class="fas fa-edit" data-bind="click: $root.showoptions"></i></li>
-                                </ul>
+    <!-- Navigation -->
+    <!-- Header Navbar: style can be found in header.less -->
+    <nav class="affix navbar navbar-default navbar-fixed-top ">
+        <header class="main-header navbar-fixed-top">
+            <!-- Logo -->
+            <a href="#" class="logo">
+                <!-- logo for regular state and mobile devices -->
+                <span class="logo-lg"><b>KDB</b>Gridstack</span>
+            </a>
+        </header>
+        <!-- Navbar Right Menu -->
+        <div class="navbar-custom-menu">
+            <ul class="nav navbar-nav"></ul>
+            <button data-bind="click:add">Add</button>
+            <button data-bind="click:saveGrid">Save</button>
+            <button type="button" class="btn btn-primary" onclick="toggle()">Toggle</button>
+
+        </div>
+    </nav>
+
+    <aside class="main-sidebar" id="sidebar">
+        <!-- Sidebar user panel -->
+        <div class="user-panel" id="stuff">
+            <div class="pull-left info">
+                //Data will go here
+            </div>
+        </div>
+        <div style="display:none;">
+            <!-- sidebar menu: : style can be found in sidebar.less -->
+        </div>
+
+        <!-- /.sidebar -->
+    </aside>
+
+    <div class="content-wrapper" id="content">
+
+        <div class="grid-stack" data-bind="gridStack:{ widgets:widgets }">
+            <div class="grid-stack-item">
+                <div class="grid-stack-item-content">
+                    @*<button data-bind="click: $parent.delete">Delete me</button>
+                        <div data-bind="text:x"></div><div data-bind="text:y"></div>
+                        <div data-bind="text:width"></div><div data-bind="text:height"></div>*@
+                    <div data-bind="with: options">
+                        <div class="card-header" style="height:10%">
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <h3 class="text-left" data-bind="text: name"></h3>
+                                </div>
+                                <div class="col-sm-6">
+                                    <ul class="panel-action">
+                                        <li><i class="fas fa-trash-alt remove-widget" data-bind="click: $root.delete"></i></li>
+                                        @*<li><button type="button" class="btn btn-primary" data-bind="click: $root.showoptions">options</button></li>*@
+                                        <li><i class="fas fa-edit" data-bind="click: $root.showoptions"></i></li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="card-body">
-                        @*<div class="pure-u-1">
-                            <div id="line-example">*@
-                        @*<h2>Charts</h2><input type="button" value="connect" data-bind="click:$root.startsub">*@
-                        <i class="fas fa-plug" data-bind="click:$root.startsub" style="cursor: pointer"></i>
+                        <div class="card-body">
+                            @*<div class="pure-u-1">
+                                <div id="line-example">*@
+                            @*<h2>Charts</h2><input type="button" value="connect" data-bind="click:$root.startsub">*@
+                            <i class="fas fa-plug" data-bind="click:$root.startsub" style="cursor: pointer"></i>
 
-                        <canvas data-bind="attr: {id:id}"></canvas>
-                        @*</div>
-                            </div>*@
+                            <canvas data-bind="attr: {id:id}"></canvas>
+                            @*</div>
+                                </div>*@
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content" data-bind="with:currentWidget">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLongTitle">Options</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <input data-bind="value: name" />
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content" data-bind="with:currentWidget">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLongTitle">Options</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <input data-bind="value: name" />
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
+    <footer>
+        <p>© 2018 - KSB</p> <button onclick="helpme()">I am a button</button>
+    </footer>
 </body>
 <script src="~/js/main.js"></script>
 <template id="card-layout">
@@ -173,7 +340,7 @@
 
 <style>
     /*Fix for modal not appearing in bootstrap v4*/
-    .fade.in {  
+    .fade.in {
         opacity: 1;
     }
 
